--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mercadopago/sdk-react": "^0.0.19",
     "@vitejs/plugin-react": "^4.3.1",
     "@vitejs/plugin-vue": "^5.0.5",
     "bootstrap": "^5.3.3",
     "buffer": "^6.0.3",
+    "firebase": "^10.12.2",
     "process": "^0.11.10",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
